// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-carousel"
      >
        <button
          aria-label="Go to step 1"
          class="om-react-ui-carousel-dot om-react-ui-carousel-dot-active"
          type="button"
        />
        <button
          aria-label="Go to step 2"
          class="om-react-ui-carousel-dot"
          type="button"
        />
        <button
          aria-label="Go to step 3"
          class="om-react-ui-carousel-dot"
          type="button"
        />
        <button
          aria-label="Go to step 4"
          class="om-react-ui-carousel-dot"
          type="button"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-carousel"
    >
      <button
        aria-label="Go to step 1"
        class="om-react-ui-carousel-dot om-react-ui-carousel-dot-active"
        type="button"
      />
      <button
        aria-label="Go to step 2"
        class="om-react-ui-carousel-dot"
        type="button"
      />
      <button
        aria-label="Go to step 3"
        class="om-react-ui-carousel-dot"
        type="button"
      />
      <button
        aria-label="Go to step 4"
        class="om-react-ui-carousel-dot"
        type="button"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Carousel renders with active index 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-carousel"
      >
        <button
          aria-label="Go to step 1"
          class="om-react-ui-carousel-dot"
          type="button"
        />
        <button
          aria-label="Go to step 2"
          class="om-react-ui-carousel-dot om-react-ui-carousel-dot-active"
          type="button"
        />
        <button
          aria-label="Go to step 3"
          class="om-react-ui-carousel-dot"
          type="button"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-carousel"
    >
      <button
        aria-label="Go to step 1"
        class="om-react-ui-carousel-dot"
        type="button"
      />
      <button
        aria-label="Go to step 2"
        class="om-react-ui-carousel-dot om-react-ui-carousel-dot-active"
        type="button"
      />
      <button
        aria-label="Go to step 3"
        class="om-react-ui-carousel-dot"
        type="button"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
